force-app/main/default/objects/Workshop__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date when the workshop is scheduled.</description>
    <inlineHelpText>Date when the workshop is scheduled.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>