force-app/main/default/objects/Workshop__c/fields/DHH_Accessible__c.field-meta.xml
<CustomField>
    <fullName>DHH_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the workshop is accessible for Deaf and Hard of Hearing participants.</description>
    <inlineHelpText>Indicates if the workshop is accessible for Deaf and Hard of Hearing participants.</inlineHelpText>
    <label>DHH Accessible</label>
    <type>Checkbox</type>
</CustomField>